# ryans_cpp_transpiler

./: .gitignore  README.md  pyproject.toml
examples/dumb_pointers/: dumb_pointers.cpp  dumb_pointers.rcpp  dumb_pointers.tcpp
ryans_cpp_transpiler/: main.py  regex.py
ryans_cpp_transpiler/complainers/: __init__.py  complainer_interface.py  mut_dumb_const.py
ryans_cpp_transpiler/converters/: __init__.py  converter_interface.py
ryans_cpp_transpiler/utils/: regex.py  string_replace.py  types.py
ryans_cpp_transpiler/utils/tests/: test_string_replace.py
src/: rcpp.hpp
src/ryans_cpp_transpiler/: main.py
src/ryans_cpp_transpiler/complainers/: __init__.py  complainer_interface.py  mut_const_not_declared.py
src/ryans_cpp_transpiler/complainers/tests/: test_mut_const_not_declared.py
src/ryans_cpp_transpiler/converters/: __init__.py  converter_interface.py
src/ryans_cpp_transpiler/tests/: test_convert_back_and_forth.py
src/ryans_cpp_transpiler/utils/: exceptions.py  regex.py  string_replace.py  types.py
src/ryans_cpp_transpiler/utils/tests/: test_regex.py  test_string_replace.py
